--- a/oridamid/42/variaveis/index.html
+++ b/oridamid/42/variaveis/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Variaveis-42</title>
+</head>
+<body>
    
     <script src="script.js"></script>
 </body>
