subindo server next

--- a/base.html
+++ b/base.html
@@ -8,6 +8,6 @@
 <body>
     <h1>Curso da Origamid de JavaScript</h1>
     <p>Olá, este é um servidor simples em Node.js!</p>
-    <script src="/scripts.js"></script>
+    <script src="./pages/scripts.js"></script>
 </body>
 </html>
