update `index.html` `script.js` aula 52

--- a/oridamid/52/tudo eh objeto/index.html
+++ b/oridamid/52/tudo eh objeto/index.html
@@ -6,7 +6,7 @@
     <title>objetos-52</title>
   </head>
   <body>
-    
+    <a class="btn" href="#">Clique</a>
     <script src="script.js"></script>
   </body>
 </html>
