aula 53 `arrays e loops`

--- a/oridamid/52/tudo eh objeto/index.html
+++ b/oridamid/52/tudo eh objeto/index.html
@@ -6,7 +6,9 @@
     <title>objetos-52</title>
   </head>
   <body>
-    <a class="btn" href="#">Clique</a>
+    <a class="btn" href="#"  id="red">Clique</a>
+
+    <p class="#text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis quas nesciunt fugiat reprehenderit dicta? Vitae, iure odit nulla atque nesciunt soluta inventore iusto quos dicta iste deleniti temporibus! Quidem, sed!</p>
     <script src="script.js"></script>
   </body>
 </html>
