aula `58` o que eh DOM part2

--- a/oridamid/58/O que eh o Dom 2/index.html
+++ b/oridamid/58/O que eh o Dom 2/index.html
@@ -6,7 +6,7 @@
     <title>O que eh DOM part2 - 58</title>
   </head>
   <body>
-    <h1>Este eh um titulo</h1>
+    <h1 class="titulo-principal">Este eh um titulo</h1>
     <script src="script.js"></script>
   </body>
 </html>
