--- a/oridamid/59/Html e Css do projeto 1/animais-fantasticos/index.html
+++ b/oridamid/59/Html e Css do projeto 1/animais-fantasticos/index.html
@@ -3,11 +3,102 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Html5 e Css3 - projeto1</title>
+  <title>Animais Fantásticos</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <main>
-      <h1>Projeto1</h1>
-    </main>
+    <nav class="menu">
+      <ul>
+        <li><a href="#animais">Animais</a></li>
+        <li><a href="#faq">Faq</a></li>
+        <li><a href="#contato">Contanto</a></li>
+        <li><a target="_blank" href="https://pythonweb.com.br">Dev →</a></li>
+      </ul>
+    </nav>
+    <section class="grid-section animais" id="animais">
+      <h1 class="titulo">Animais Fantásticos</h1>
+      <ul>
+        <li>
+          <img src="images/imagem1.jpg" alt="">
+        </li>
+        <li>
+          <img src="images/imagem8.jpg" alt="">
+        </li>
+        <li>
+          <img src="images/imagem9.jpg" alt="">
+        </li>
+        <li>
+          <img src="images/imagem10.jpg" alt="">
+        </li>
+        <li>
+          <img src="images/imagem11.jpg" alt="">
+        </li>
+        <li>
+          <img src="images/imagem12.jpg" alt="">
+        </li>
+      </ul>
+      <div class="animais-descricao">
+        <section>
+          <h2>Raposa</h2>
+          <p>As raposas são animais mamíferos e onívoros pertencentes à família Canidae. São vulpídeos de porte médio, caracterizados por um focinho comprido e uma cauda longa e peluda.</p>
+          <p>Também apresentam como particularidade suas pupilas ovais, semelhantes às pupilas verticais dos felídeos.</p>
+          <p>As raposas são animais mamíferos e onívoros pertencentes à família Canidae. São vulpídeos de porte médio, caracterizados por um focinho comprido e uma cauda longa e peluda.</p>
+        </section>
+        <section>
+          <h2>Esquilo</h2>
+          <p>As raposas são animais mamíferos e onívoros pertencentes à família Canidae. São vulpídeos de porte médio, caracterizados por um focinho comprido e uma cauda longa e peluda.</p>
+          <p>Também apresentam como particularidade suas pupilas ovais, semelhantes às pupilas verticais dos felídeos.</p>
+          <p>As raposas são animais mamíferos e onívoros pertencentes à família Canidae. São vulpídeos de porte médio, caracterizados por um focinho comprido e uma cauda longa e peluda.</p>
+        </section>
+        <section>
+          <h2>Urso</h2>
+          <p>As raposas são animais mamíferos e onívoros pertencentes à família Canidae. São vulpídeos de porte médio, caracterizados por um focinho comprido e uma cauda longa e peluda.</p>
+          <p>Também apresentam como particularidade suas pupilas ovais, semelhantes às pupilas verticais dos felídeos.</p>
+          <p>As raposas são animais mamíferos e onívoros pertencentes à família Canidae. São vulpídeos de porte médio, caracterizados por um focinho comprido e uma cauda longa e peluda.</p>
+        </section>
+        <section>
+          <h2>Macaco</h2>
+          <p>As raposas são animais mamíferos e onívoros pertencentes à família Canidae. São vulpídeos de porte médio, caracterizados por um focinho comprido e uma cauda longa e peluda.</p>
+          <p>Também apresentam como particularidade suas pupilas ovais, semelhantes às pupilas verticais dos felídeos.</p>
+          <p>As raposas são animais mamíferos e onívoros pertencentes à família Canidae. São vulpídeos de porte médio, caracterizados por um focinho comprido e uma cauda longa e peluda.</p>
+        </section>
+        <section>
+          <h2>Leão</h2>
+          <p>As raposas são animais mamíferos e onívoros pertencentes à família Canidae. São vulpídeos de porte médio, caracterizados por um focinho comprido e uma cauda longa e peluda.</p>
+          <p>Também apresentam como particularidade suas pupilas ovais, semelhantes às pupilas verticais dos felídeos.</p>
+          <p>As raposas são animais mamíferos e onívoros pertencentes à família Canidae. São vulpídeos de porte médio, caracterizados por um focinho comprido e uma cauda longa e peluda.</p>
+        </section>
+      </div>
+    </section>
+    <section class="grid-section faq" id="faq">
+      <h1>FAQ</h1>
+      <dl>
+        <dt>Qual a idade dos animais?</dt>
+        <dd>As raposas são animais mamíferos e onívoros pertencentes à família Canidae. São vulpídeos de porte médio, caracterizados por um focinho comprido e uma cauda longa e peluda.</dd>
+        <dt>Eles são fantásticos?</dt>
+        <dd>Também apresentam como particularidade suas pupilas ovais, semelhantes às pupilas verticais dos felídeos.</dd>
+        <dt>Qual a diferença?</dt>
+        <dd>As raposas são animais mamíferos e onívoros pertencentes à família Canidae. São vulpídeos de porte médio, caracterizados por um focinho comprido e uma cauda longa e peluda.</dd>
+        <dt>Como proteger?</dt>
+        <dd>Também apresentam como particularidade suas pupilas ovais, semelhantes às pupilas verticais dos felídeos.</dd>
+      </dl>
+    </section>
+    <section class="grid-section contato" id="contato">
+      <h1>Contato</h1>
+      <div class="mapa">
+        <img src="images/mapa.png">
+      </div>
+      <ul class="dados">
+        <li>contato@pythonweb.com</li>
+        <li>+55 (21) 9999-9999</li>
+        <li>Rua do Conde, nº 21</li>
+        <li>Rio de Janeiro - RJ</li>
+        <li>Doe 0.0028 bitcoin para nos ajudar</li>
+        <li>Seg à Sex das 8 às 18</li>
+      </ul>
+    </section>
+    <footer class="copy">
+      <p>Todos os direitos reservados.</p>
+    </footer>
 </body>
 </html>
