--- a/oridamid/59/Html e Css do projeto 1/animais-fantasticos/index.html
+++ b/oridamid/59/Html e Css do projeto 1/animais-fantasticos/index.html
@@ -4,7 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Animais Fantásticos</title>
+  <!-- google fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display+SC" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
+
 </head>
 <body>
     <nav class="menu">
@@ -17,7 +20,7 @@
     </nav>
     <section class="grid-section animais" id="animais">
       <h1 class="titulo">Animais Fantásticos</h1>
-      <ul>
+      <ul class="animais-lista">
         <li>
           <img src="images/imagem1.jpg" alt="">
         </li>
@@ -71,8 +74,8 @@
       </div>
     </section>
     <section class="grid-section faq" id="faq">
-      <h1>FAQ</h1>
-      <dl>
+      <h1 class="titulo">FAQ</h1>
+      <dl class="faq-lista">
         <dt>Qual a idade dos animais?</dt>
         <dd>As raposas são animais mamíferos e onívoros pertencentes à família Canidae. São vulpídeos de porte médio, caracterizados por um focinho comprido e uma cauda longa e peluda.</dd>
         <dt>Eles são fantásticos?</dt>
@@ -84,7 +87,7 @@
       </dl>
     </section>
     <section class="grid-section contato" id="contato">
-      <h1>Contato</h1>
+      <h1 class="titulo">Contato</h1>
       <div class="mapa">
         <img src="images/mapa.png">
       </div>
