aula 62 create `script.js`

--- a/oridamid/59/Html e Css do projeto 1/animais-fantasticos/index.html
+++ b/oridamid/59/Html e Css do projeto 1/animais-fantasticos/index.html
@@ -103,5 +103,7 @@
     <footer class="copy">
       <p>Todos os direitos reservados.</p>
     </footer>
+
+    <script src="js/script.js"></script>
 </body>
 </html>
