--- a/oridamid/59/Html e Css do projeto 1/animais-fantasticos/index.html
+++ b/oridamid/59/Html e Css do projeto 1/animais-fantasticos/index.html
@@ -104,6 +104,7 @@
       <p>Todos os direitos reservados.</p>
     </footer>
 
-    <script src="js/script.js"></script>
+    <!-- <script src="js/script.js"></script> -->
+    <script src="js/aula68.js"></script>
 </body>
 </html>
